--- a/src/styles/sass/ninja/layout/_buttons.sass
+++ b/src/styles/sass/ninja/layout/_buttons.sass
@@ -62,6 +62,7 @@
 
 .Dropdown,
 .MenuItems
+    +border-radius(0)
     +box-shadow(0 1px 8px rgba(0, 0, 0, 0.1))
     padding: 0 0 6px 0
     margin: 0
@@ -69,6 +70,9 @@
         color: #FFF
     font-size: 14px
     border: 1px solid #EEE
+    &:before,
+    &:after
+        display: none
     li
         a
             &,
@@ -87,3 +91,5 @@
                 color: #333 !important
                 background:
                     color: #EEE !important
+    hr
+        margin: 5px
